# FileSyncer

./: .gitignore  README.md
.cache/clangd/index/: client.c.F13F8083E69C5B75.idx  directory_event_listener.c.BA4FE8D29FD879F3.idx  directory_event_listener.h.410ED84DD9A95688.idx  hash_map.h.EFFA1FE9A769CEBB.idx  server.c.183CE3DFDE5416D9.idx  wrapper_functions.c.743F4394418F3B0B.idx  wrapper_functions.h.4762A60BF119509E.idx
src/: CMakeLists.txt  client.c  directory_event_listener.c  directory_event_listener.h  server.c  wrapper_functions.c  wrapper_functions.h
src/data_structures/hash_map/: hash_map.c  hash_map.h
src/data_structures/queue/: queue.c  queue.h
